--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "quill": "^2.0.3",
     "quill-cursors": "^4.0.4",
     "react": "^19.2.4",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.3",
